--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -32,12 +32,23 @@ nav input:focus{
 nav li {
   display: inline-block;
 }
+h3{
+font-family: Avenir-Black;
+}
+h2{
+font-family: Avenir-Black;
+color: #ffffffeb;
+}
+div a,
+div p{
+font-family: Avenir;
+}
 
 main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 1em;
-  max-width: 64%;
+  max-width: 74%;
   margin: auto;
   box-shadow: 0 2px 10px 0 hsl(0, 0%, 73%);
   padding: 20px 60px 40px;
@@ -46,11 +57,88 @@ main {
 }
 
 main article {
-  background-color: #d8127d;
-  padding: 120px;
+  /* background-color: #d8127d; */
+  padding: 10px;
   border-radius: 25px;
   transition: all .2s ease-in-out;
   cursor: pointer;
+  text-align: center;
+  display: inline-table;
+}
+
+main article div{
+display: none;
+}
+main article:nth-last-child(-n+31){
+display: none;
+}
+
+.listo .hide{
+transform: none;
+}
+
+.listo article{
+display: grid;
+grid-template-columns: 1fr 3fr;
+grid-gap: 10px;
+background-color: #fff;
+text-align: left;
+border-radius: 0px;
+margin-bottom: 10px;
+cursor: default;
+}
+
+.listo article:nth-child(-n+27){
+display: grid;
+}
+
+.listo article:nth-child(-n+9){
+display: none;
+}
+
+.listo article:nth-last-child(-n+13){
+display: none;
+}
+
+.listo article div{
+display: block;
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+.listo img{
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.listo{
+display: block;
+}
+
+.listo article:nth-child(1),
+.listo article:nth-child(2),
+.listo article:nth-child(3),
+.listo article:nth-child(4),
+.listo article:nth-child(5),
+.listo article:nth-child(6),
+.listo article:nth-child(7),
+.listo article:nth-child(8),
+.listo article:nth-child(9){
+animation: none;
+}
+
+.listo article:nth-child(1):hover,
+.listo article:nth-child(2):hover,
+.listo article:nth-child(3):hover,
+.listo article:nth-child(4):hover,
+.listo article:nth-child(5):hover,
+.listo article:nth-child(6):hover,
+.listo article:nth-child(7):hover,
+.listo article:nth-child(8):hover,
+.listo article:nth-child(9):hover{
+transform: none;
+background-color: #fff;
+cursor: default;
 }
 
 main article:nth-child(1):hover,
@@ -65,7 +153,7 @@ main article:nth-child(9):hover {
   animation: none;
   animation-iteration-count: none;
   transform: scale(1.1);
-  background-color: #fff;
+  /* background-color: #229ee6; */
 }
 
 main article:nth-child(2),
@@ -89,11 +177,35 @@ main article:nth-child(9) {
   animation-iteration-count: infinite;
 }
 
+main article:nth-child(2):hover,
+main article:nth-child(6):hover,
+main article:nth-child(7):hover{
+background-color: #009949;
+}
+
+main article:nth-child(1):hover,
+main article:nth-child(5):hover,
+main article:nth-child(8):hover{
+background-color: #812c7c;
+}
+
+main article:nth-child(4):hover,
+main article:nth-child(3):hover,
+main article:nth-child(9):hover{
+background-color: #00a3da;
+}
+
+
+aside h1{
+  margin-bottom: 12px;
+}
+
 h1 {
-  font-size: 25px;
+  font-size: 30px;
   font-family: Avenir-Roman;
   text-align: center;
   color: #4a4a4a;
+  margin-bottom: 0em;
 }
 
 .red{
@@ -113,6 +225,8 @@ margin-left: 4em;
 
 aside{
   grid-column: 1/2;
+  /* max-height: 930px; */
+  /* overflow: hidden; */
 }
 
 aside div{
@@ -125,10 +239,21 @@ aside div{
   grid-gap: 10px
 }
 
+
+
+aside div article:nth-child(-n+100){
+display: none;
+}
+aside div article:nth-child(-n+3){
+display: block;
+}
+
 aside article{
 /* padding:40px; */
 grid-column: 2/3;
-background-color: #f5f5f5;
+/* background-color: #f5f5f5; */
+text-align: center;
+transform: none;
 }
 
 .tricolor{
@@ -145,6 +270,8 @@ cursor: default;
 }
 .tricolor h1 span{
 color:#1ba0e0;
+font-size: 40px;
+
 }
 
 aside h1 span{
@@ -169,7 +296,54 @@ aside h1 span:nth-child(1),
 aside h1 span:nth-child(7){
     color: #009949;
 }
+div a,
+aside button{
+  background-color: #d50f81;
+  color: #fff;
+  border-radius: 5px;
+  font-size: 16px;
+  padding: 6px;
+  border: none;
+  transition: .2s;
+  /* box-shadow: #a50d63; */
+  overflow: visible;
+  text-decoration: none;
+}
 
+aside button:active,
+aside button:focus{
+outline: none;
+}
+aside button:hover{
+cursor: pointer;
+background-color: #1ba1e0;
+animation: shake2 1s;
+animation-iteration-count: infinite;
+overflow: visible;
+}
+
+.hidden{
+display: none;
+}
+.hide{
+transform: scale(1.1);
+}
+
+.hide:nth-of-type(1),
+.hide:nth-of-type(5),
+.hide:nth-of-type(8){
+background-color: #d8127d;
+}
+.hide:nth-of-type(4),
+.hide:nth-of-type(3),
+.hide:nth-of-type(9){
+background-color: #00a3da;
+}
+.hide:nth-of-type(2),
+.hide:nth-of-type(6),
+.hide:nth-of-type(7){
+background-color: #009949;
+}
 @keyframes shake1 {
   0% {transform: translate(1px, 1px) rotate(0deg);}
   20% {transform: translate(-1px, -2px) rotate(-1deg);}
