--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -53,8 +53,17 @@ main {
   box-shadow: 0 2px 10px 0 hsl(0, 0%, 73%);
   padding: 20px 60px 40px;
   background-color: #f5f5f5;
-  border-radius: 10px
+  border-radius: 10px;
 }
+
+.loader{
+  background-image: url(/src/img/oba_loader.gif);
+  background-size: 40%;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  height: 504px;
+}
+
 
 main article {
   /* background-color: #d8127d; */
