osrs loader added

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -57,7 +57,7 @@ main {
 }
 
 .loader{
-  background-image: url(/src/img/oba_loader.gif);
+  background-image: url(/src/img/osrs_loader_v2.gif);
   background-size: 40%;
   background-position: 50%;
   background-repeat: no-repeat;
